// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Line renders correctly 1`] = `
<SteppedLineTo
  className=""
  from={
    <div>
      
  
      <div
        style="position: absolute; top: 0px; left: 0px;"
      >
        from
      </div>
      

    </div>
  }
  offset={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  orientation="v"
  style={Object {}}
  to={
    <div>
      

      <div
        style="position: absolute; top: 0px; left: 100px;"
      >
        from
      </div>
      

    </div>
  }
>
  <div
    className="stepped-line-to"
  >
    <SteppedLine
      className=""
      from={
        <div>
          
  
          <div
            style="position: absolute; top: 0px; left: 0px;"
          >
            from
          </div>
          

        </div>
      }
      offset={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      orientation="v"
      style={Object {}}
      to={
        <div>
          

          <div
            style="position: absolute; top: 0px; left: 100px;"
          >
            from
          </div>
          

        </div>
      }
      x0={0}
      x1={0}
      y0={0}
      y1={0}
    >
      <Line
        className=""
        from={
          <div>
            
  
            <div
              style="position: absolute; top: 0px; left: 0px;"
            >
              from
            </div>
            

          </div>
        }
        offset={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        orientation="v"
        style={Object {}}
        to={
          <div>
            

            <div
              style="position: absolute; top: 0px; left: 100px;"
            >
              from
            </div>
            

          </div>
        }
        x0={0}
        x1={0}
        y0={0}
        y1={0}
      >
        <div
          className="line-placeholder"
        >
          <div
            className="line-placeholder-item"
            from={
              <div>
                
  
                <div
                  style="position: absolute; top: 0px; left: 0px;"
                >
                  from
                </div>
                

              </div>
            }
            offset={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            orientation="v"
            style={
              Object {
                "borderTopColor": "#ddd",
                "borderTopStyle": "solid",
                "borderTopWidth": 1,
                "left": "0px",
                "position": "absolute",
                "top": "0px",
                "transform": "rotate(0deg)",
                "transformOrigin": "0 0",
                "width": "0px",
                "zIndex": "1",
              }
            }
            to={
              <div>
                

                <div
                  style="position: absolute; top: 0px; left: 100px;"
                >
                  from
                </div>
                

              </div>
            }
          />
        </div>
      </Line>
    </SteppedLine>
  </div>
</SteppedLineTo>
`;

exports[`Line offset works well 1`] = `
<SteppedLineTo
  className=""
  from={
    <div>
      
  
      <div
        style="position: absolute; top: 0px; left: 0px;"
      >
        from
      </div>
      

    </div>
  }
  offset={
    Object {
      "x": 100,
      "y": 100,
    }
  }
  orientation="v"
  style={Object {}}
  to={
    <div>
      

      <div
        style="position: absolute; top: 0px; left: 100px;"
      >
        from
      </div>
      

    </div>
  }
>
  <div
    className="stepped-line-to"
  >
    <SteppedLine
      className=""
      from={
        <div>
          
  
          <div
            style="position: absolute; top: 0px; left: 0px;"
          >
            from
          </div>
          

        </div>
      }
      offset={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      orientation="v"
      style={Object {}}
      to={
        <div>
          

          <div
            style="position: absolute; top: 0px; left: 100px;"
          >
            from
          </div>
          

        </div>
      }
      x0={-100}
      x1={-100}
      y0={-100}
      y1={-100}
    >
      <Line
        className=""
        from={
          <div>
            
  
            <div
              style="position: absolute; top: 0px; left: 0px;"
            >
              from
            </div>
            

          </div>
        }
        offset={
          Object {
            "x": 100,
            "y": 100,
          }
        }
        orientation="v"
        style={Object {}}
        to={
          <div>
            

            <div
              style="position: absolute; top: 0px; left: 100px;"
            >
              from
            </div>
            

          </div>
        }
        x0={-100}
        x1={-100}
        y0={-100}
        y1={-100}
      >
        <div
          className="line-placeholder"
        >
          <div
            className="line-placeholder-item"
            from={
              <div>
                
  
                <div
                  style="position: absolute; top: 0px; left: 0px;"
                >
                  from
                </div>
                

              </div>
            }
            offset={
              Object {
                "x": 100,
                "y": 100,
              }
            }
            orientation="v"
            style={
              Object {
                "borderTopColor": "#ddd",
                "borderTopStyle": "solid",
                "borderTopWidth": 1,
                "left": "-100px",
                "position": "absolute",
                "top": "-100px",
                "transform": "rotate(0deg)",
                "transformOrigin": "0 0",
                "width": "0px",
                "zIndex": "1",
              }
            }
            to={
              <div>
                

                <div
                  style="position: absolute; top: 0px; left: 100px;"
                >
                  from
                </div>
                

              </div>
            }
          />
        </div>
      </Line>
    </SteppedLine>
  </div>
</SteppedLineTo>
`;
